--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,7 @@
   </head>
 
   <body>
-    <div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </div>
+    <%= render "shared/flash" if alert || notice %>
     <main>
       <%= yield %>
     </main>
