--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<p>Standup</p>
+<%= link_to "Sign up", new_user_registration_path %>
+<span>|</span>
+<%= link_to "Login", new_user_session_path  %>
