--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= render "shared/logout" if user_signed_in? %>
     <%= render "shared/flash" if alert || notice %>
     <main>
       <%= yield %>
