Add page to see an individual team

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -9,7 +9,7 @@
     <% @teams.each do |team| %>
       <tr>
         <td><%= team.name %></td>
-        <td></td>
+        <td><%= link_to "Show", team %></td>
         <td></td>
       </tr>
     <% end %>
