Extract partial for showing errors

--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -1,13 +1,6 @@
 <%= form_for @seat do |f| %>
   <% if @seat.errors.any? %>
-    <div class="error-explanation">
-      <h2><%= pluralize(@seat.errors.count, "errors") %> prevented this seat from being saved:</h2>
-      <ul>
-        <% @seat.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render partial: "shared/error_explanation", locals: { errors: @seat.errors, name: "seat" } %>
   <% end%>
 
   <div class="field">
