Add route for creating a new seat
Doing the actual creation is not implemented, yet.

--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @seat do |f| %>
+<%= form_for [@team, @seat] do |f| %>
   <% if @seat.errors.any? %>
     <%= render partial: "shared/error_explanation", locals: { errors: @seat.errors, name: "seat" } %>
   <% end%>
