--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -4,6 +4,11 @@
   <% end%>
 
   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email %>
   </div>
