Add routes for editing teams

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -10,6 +10,7 @@
       <tr>
         <td><%= team.name %></td>
         <td><%= link_to "Show", team %></td>
+        <td><%= link_to "Edit", edit_team_path(team) %></td>
         <td></td>
       </tr>
     <% end %>
