--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,5 +5,5 @@
 
 <%= render partial: "seats/list", locals: { seats: @team.seats } %>
 <%= link_to "Edit", edit_team_path(@team) %> |
-<%= link_to 'New Seat', new_team_seat_path(@team) %> |
+<%= link_to "New Seat", new_team_seat_path(@team) %> |
 <%= link_to "Back", teams_path %>
