--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -4,7 +4,7 @@
 </p>
 
 <h2>Seats</h2>
-<%= render partial: "seats/list", locals: { seats: @team.seats } %>
+<%= render partial: "seats/list", locals: { seats: @team.seats.order(:name) } %>
 <%= link_to "New Seat", new_team_seat_path(@team) %>
 
 <br />
