--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,8 @@
-<div>
-  <span>Logged in as <strong><%= current_user.email %></strong>.<span>
-  <%= button_to "Logout", destroy_user_session_path, method: :delete %>
-</div>
+<nav class="navbar navbar-light bg-faded">
+  <a class="navbar-brand" href="/">Standfast</a>
+  <ul class="nav navbar-nav float-xs-right">
+    <li class="nav-item">
+      <%= button_to "Logout", destroy_user_session_path, class: "btn btn-link", method: :delete %>
+    </li>
+  </ul>
+</nav>
