--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -12,7 +12,7 @@
         <td><%= team.name %></td>
         <td><%= link_to "Show", team %></td>
         <td><%= link_to "Edit", edit_team_path(team) %></td>
-        <td><%= button_to "Remove", team_path(team), method: :delete, data: { confirm: "Are you sure?" } %></td>
+        <td><%= button_to "Remove", team_path(team), class: "btn btn-sm btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %></td>
       </tr>
     <% end %>
   </tbody>
