Render "back" buttons inside our form templates
To do this, we have to pass into the form template the path to navigate
to when cancelling.

--- a/app/views/seats/edit.html.erb
+++ b/app/views/seats/edit.html.erb
@@ -1,4 +1,3 @@
 <h1>Editing Seat</h1>
 
-<%= render "form" %>
-<%= link_to "Back", team_path(@seat.team) %>
+<%= render "form", back_path: team_path(@seat.team) %>
