--- a/app/views/seats/new.html.erb
+++ b/app/views/seats/new.html.erb
@@ -1,4 +1,3 @@
 <h1>New Seat</h1>
 
-<%= render "form" %>
-<%= link_to "Back", team_path(@team) %>
+<%= render "form", back_path: team_path(@team) %>
