--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -8,7 +8,6 @@
     <%= f.text_field :name %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit %>
+  <%= link_to "Back", back_path %>
 <% end %>
