--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -13,7 +13,6 @@
     <%= f.email_field :email %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit %>
+  <%= link_to "Back", back_path %>
 <% end %>
