--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -3,16 +3,16 @@
     <%= render partial: "shared/error_explanation", locals: { errors: @seat.errors, name: "seat" } %>
   <% end%>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email, class: "form-control" %>
   </div>
 
-  <%= f.submit %>
-  <%= link_to "Back", back_path %>
+  <%= f.submit class: "btn btn-outline-primary" %>
+  <%= link_to "Cancel", back_path, role: "button", class: "btn btn-outline-secondary" %>
 <% end %>
