--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,18 @@
   </head>
   <body>
     <%= render "shared/nav" %>
-    <main class="container-fluid">
-      <%= render "shared/flash" if alert || notice %>
-      <%= yield %>
-    </main>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-2">
+          <%= render "shared/side" %>
+        </div>
+        <div class="col-xs-10">
+          <main class="container-fluid">
+            <%= render "shared/flash" if alert || notice %>
+            <%= yield %>
+          </main>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
