Label the nav and sidebar as Primary and Secondary respectively

--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills nav-stacked" role="navigation">
+<ul class="nav nav-pills nav-stacked" role="navigation" aria-label="Secondary">
   <li class="nav-item">
     <%= link_to "Teams", teams_path, class: "nav-link"  %>
   </li>
