--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded" aria-label="Primary">
   <a class="navbar-brand" href="/">Standfast</a>
   <ul class="nav navbar-nav float-xs-right">
     <li class="nav-item">
