Add some JS to add the `active` class to our side links
Not sure if this is the best idea… or if we should be doing this server
side.

In any case, it works fine for now. Note that we use a regex. That’s
because we need `teams` to be highlighted whether we’re on /teams or
/teams/5/edit.

--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -1,8 +1,8 @@
 <ul class="nav nav-pills nav-stacked" role="navigation" aria-label="Secondary">
   <li class="nav-item">
-    <%= link_to "Teams", teams_path, class: "nav-link"  %>
+    <%= link_to "Teams", teams_path, class: "nav-link", data: { active: "/teams" }  %>
   </li>
   <li class="nav-item">
-    <%= link_to "Users", users_path, class: "nav-link"  %>
+    <%= link_to "Users", users_path, class: "nav-link", data: { active: "/users" }  %>
   </li>
 </ul>
