Use a flex-based layout for the sidebar and main area
Bootstrap columns work well, but are always responsive. Here, we want
the left side navigation to have a fixed width. Note that the flex
layout sass is in the /lib directory. This is because it theoretically
could be used in completely separate apps, and is not specific to this
app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,15 @@
   </head>
   <body>
     <%= render "shared/nav" %>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-2">
-          <%= render "shared/side" %>
-        </div>
-        <div class="col-xs-10">
-          <main class="container-fluid">
-            <%= render "shared/flash" if alert || notice %>
-            <%= yield %>
-          </main>
-        </div>
+    <div class="flex-container">
+      <div class="flex-fixed-small">
+        <%= render "shared/side" %>
+      </div>
+      <div class="flex-1">
+        <main class="container-fluid">
+          <%= render "shared/flash" if alert || notice %>
+          <%= yield %>
+        </main>
       </div>
     </div>
   </body>
