--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Users</h1>
-<table>
+<table class="table">
   <thead>
     <th>email</th>
     <th></th>
@@ -10,7 +10,7 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= link_to "Edit", edit_user_path(user) %></td>
-        <td><%= button_to "Remove", user_path(user), method: :delete, data: { confirm: "Are you sure?" } %></td>
+        <td><%= button_to "Remove", user_path(user), class: "btn btn-sm btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %></td>
       </tr>
     <% end %>
   </tbody>
