Center the login form

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <main>
+    <main class="mx-auto" style="width: 10.9rem;">
       <%= yield %>
     </main>
   </body>
