--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked" role="navigation" aria-label="Secondary">
   <li class="nav-item">
-    <%= link_to "Teams", teams_path, class: "nav-link", data: { active: "/teams" }  %>
+    <%= link_to "Teams", teams_path, class: "nav-link", data: { active: "/teams,/seats" }  %>
   </li>
   <li class="nav-item">
     <%= link_to "Users", users_path, class: "nav-link", data: { active: "/users" }  %>
