Add the browser's current time zone as a query param to the `new_team` link
This way, the new model will have the inferred timezone and we’ll
display (hopefully) something to the user that’s correct right off the
bat.

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -18,4 +18,4 @@
   </tbody>
 </table>
 
-<%= link_to "New Team", new_team_path %>
+<%= link_to "New Team", new_team_path, data: { infer_timezone: true } %>
