Add _real_ basic styling/landing page stuff

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<%= link_to "Login", new_user_session_path  %>
+<div class="card card-block">
+  <h1 class="card-title">Standfast</h1>
+  <p class="card-text">Collect and share status reports via email</p>
+  <%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary"  %>
+</div>
