Center on the page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="card card-block">
+<div class="card card-block mx-auto mt-2" style="width: 400px">
   <h1 class="card-title">Standfast</h1>
   <p class="card-text">Collect and share status reports via email</p>
   <%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary"  %>
