--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,9 @@
-<div class="card card-block mx-auto mt-2" style="width: 400px">
-  <h1 class="card-title">Standfast</h1>
-  <p class="card-text">Collect and share status reports via email</p>
-  <%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary"  %>
+<div class="pb-1 pt-1">
+  <h3 class="text-muted">Standfast</h3>
+</div>
+
+<div class="jumbotron">
+  <h1>Nobody likes meetings</h1>
+  <p>Collect and share status reports via email.</p>
+  <p><%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary" %></p>
 </div>
