Tweak the "landing" page styling
Have the <h1> be the name of the app (evening though visually it isn’t
the biggest thing. Also, center the jumbotron text, make the <h2>
bigger, remove the background from the jumbotron, and apply “lead”
styling to the tag line.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div class="pb-1 pt-1">
-  <h3 class="text-muted">Standfast</h3>
+  <h1 class="text-muted">Standfast</h3>
 </div>
 
-<div class="jumbotron">
-  <h1>Nobody likes meetings</h1>
-  <p>Collect and share status reports via email.</p>
+<div class="jumbotron text-xs-center" style="background: none">
+  <h2 class="display-3">Nobody likes meetings</h1>
+  <p class="lead">Collect and share status reports via email.</p>
   <p><%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary" %></p>
 </div>
