--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,6 @@
 
 <div class="jumbotron text-xs-center" style="background: none">
   <h2 class="display-3">Status reports via email</h1>
-  <p class="lead">Collect and share daily status reports through email, ensuring that you and your entire team has all the right information.</p>
+  <p class="lead">Collect and share daily status reports through email, ensuring that you and your entire team have all the right information.</p>
   <p><%= link_to "Login", new_user_session_path, class: "btn btn-outline-primary" %></p>
 </div>
