--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -1,8 +1,8 @@
 <ul class="nav nav-pills nav-stacked" role="navigation" aria-label="Secondary">
   <li class="nav-item">
-    <%= link_to "Teams", teams_path, class: "nav-link", data: { active: "/teams,/seats" }  %>
+    <%= link_to "Teams", teams_path, class: "nav-link" + (@active_nav == "teams" ? " active" : "") %>
   </li>
   <li class="nav-item">
-    <%= link_to "Users", users_path, class: "nav-link", data: { active: "/users" }  %>
+    <%= link_to "Users", users_path, class: "nav-link" + (@active_nav == "users" ? " active" : "") %>
   </li>
 </ul>
